hphp/test/slow/collection_classes/frozen_set/immutability2.php.expectf
HipHop Fatal error: Call to undefined method HH\FixedSet::add from anonymous context in %s/slow/collection_classes/frozen_set/immutability2.php on line 7
